Bug 385672 - Identify display broken on wayland
Summary: Identify display broken on wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.14.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords: wayland-only
: 402456 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-12 19:14 UTC by Kamil Piwowarski
Modified: 2020-04-14 15:18 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments
Screenshot (2.22 MB, image/png)
2017-10-12 19:14 UTC, Kamil Piwowarski
Details
picture (1.54 MB, image/png)
2020-04-01 14:03 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Piwowarski 2017-10-12 19:14:10 UTC
Created attachment 108316 [details]
Screenshot

Tested on KDE neon 5.11 live session.

Hardware:
CPU: Intel(R) Core(TM) i7-3630QM CPU @ 2.40GHz
GPU: 3rd Gen Core processor Graphics Controller

1. Open Displays settings module
2. Click (i) button to identify screen
3. See flickering badges on the same screen
4. You can move badges using "More actions" -> "Move" on taskbar.
5. You cant close Displays window - you have to kill that
Comment 1 Sebastian Kügler 2017-10-17 14:02:22 UTC
Thanks for the report! I'm actually working on a fix for this problem, see https://phabricator.kde.org/D3598
Comment 2 Nate Graham 2019-09-09 14:20:38 UTC
*** Bug 402456 has been marked as a duplicate of this bug. ***
Comment 3 Méven Car 2020-03-25 14:44:25 UTC
The patch mentioned was merged in https://phabricator.kde.org/D9414 and changed the handling of the osd windows.
So This bug might be fixed now, needs confirmation.
Comment 4 Patrick Silva 2020-04-01 14:03:02 UTC
Created attachment 127162 [details]
picture

Still not working as expected. 

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.1
Kernel Version: 5.3.0-45-generic
OS Type: 64-bit
Processors: 4 × Intel® Core™ i3-3110M CPU @ 2.40GHz
Memory: 7,7 GiB of RAM
Graphics Processor: Mesa DRI Intel® Ivybridge Mobile
Comment 5 Benjamin Port 2020-04-14 15:07:19 UTC
Git commit 538116fd109613284889134ae7ecbc2ba7bfc281 by Benjamin Port.
Committed on 14/04/2020 at 15:00.
Pushed by bport into branch 'master'.

fix (kcm): correct output identifier position on wayland

Summary:
Wayland don't allow to update client position so we use PlasmaQuick/Dialog
PlasmaQuick/Dialog will talk to kwin throught plasma shell protocol to set dialog position

Reviewers: #plasma, romangg, davidedmundson

Reviewed By: #plasma, romangg, davidedmundson

Subscribers: romangg, davidedmundson, anthonyfieroni, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28817

M  +2    -0    kcm/CMakeLists.txt
M  +16   -10   kcm/output_identifier.cpp
M  +5    -2    kcm/output_identifier.h

https://commits.kde.org/kscreen/538116fd109613284889134ae7ecbc2ba7bfc281