fix (kcm): correct output identifier position on wayland

Summary:
Wayland don't allow to update client position so we use PlasmaQuick/Dialog
PlasmaQuick/Dialog will talk to kwin throught plasma shell protocol to set dialog position

BUG: 385672

Reviewers: #plasma, romangg, davidedmundson

Reviewed By: #plasma, romangg, davidedmundson

Subscribers: romangg, davidedmundson, anthonyfieroni, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28817